# rusty-chatbot

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  UI-MOCK.html  compose.yaml
backend/: Cargo.toml  DATABASE.md
backend/src/: db.rs  llm.rs  main.rs
backend/src/api/: error.rs  mod.rs  response.rs  routes.rs
backend/src/db/: db.rs
backend/src/llm/: llm.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  input.css  tailwind.config.js
frontend/nginx/templates/: default.conf.template
frontend/src/: app.rs  main.rs  store.rs
frontend/src/app/components/: conversation.rs  mod.rs  sidebar.rs  voice.rs
models/: Cargo.toml
models/src/: api.rs  conversation.rs  lib.rs  message.rs  voice.rs
