[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.31"
env_logger = "0.10.0"
models = { path = "../models" }
sqlx = { version = "0.7.2", features = ["sqlite", "sqlx-sqlite", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["test-util", "macros"] }
uuid = { version = "1.4.1", features = ["v4"] }
