[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.0"
llm = "0.1.1"
log = "0.4.20"
models = { path = "../models" }
serde = "1.0.189"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["sqlite", "sqlx-sqlite", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["test-util", "macros"] }
uuid = { version = "1.4.1", features = ["v4"] }
