[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
models = { path = "../models" }
chrono = "0.4.31"
uuid = { version = "1.5.0", features = ["v4"] }
yewdux = "0.9.4"

