[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
chrono = "0.4.31"
uuid = { version = "1.5.0", features = ["v4"] }
reqwest = { version = "0.11.22", features = ["serde_json"] }
serde = "1.0.189"
leptos = { version = "0.5.1", features = ["csr"] }

