[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = "1.0.188"
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
